add_subdirectory(_exercises)
add_subdirectory(designers_network)
add_subdirectory(die_roller)
add_subdirectory(finicky_counter)
add_subdirectory(guess_my_number)
add_subdirectory(menu_chooser)
add_subdirectory(play_again)
add_subdirectory(play_again2)
add_subdirectory(score_rater)
add_subdirectory(score_rater2)
add_subdirectory(score_rater3)